MetaProxy, MetaStream: restore saved stream metadata on start

BUGFIXES:
  * Fix a regression where stream metadata would be forgotten on start.

BUG: 305389
FIXED-IN: 2.7